api doc link are modified to render images folder is added

--- a/apidoc.html
+++ b/apidoc.html
@@ -48,8 +48,8 @@
             <div class="text-left prose max-w-none lg:prose-lg content mb-24">
                 <p>Check out our Environ Earth API for Latest data of Green Index of All Companies across the Global</p>
                   <h2 class="font-franzSansBold"><strong>HOW TO MAKE AN API CALL</strong></h2>
-                <p><strong>Base url</strong><p>https://serene-sea-13642.herokuapp.com/</p>
-                  <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://serene-sea-13642.herokuapp.com/" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
+                <p><strong>Base url</strong><p>https://green-index-api.onrender.com/</p>
+                  <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://green-index-api.onrender.com" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
                     </div>
                 <p><em>Returns the data of All the Companies in JSON Format</em></p>
                 <h2 class="font-franzSansBold"><strong>PARAMETERS</strong></h1>
@@ -58,7 +58,7 @@
                 <p><em>This API call will return all the data of a specific Company</em></p>
                 <p>ex:-</p>
                 <p>/company/apple</p>
-                <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://serene-sea-13642.herokuapp.com/company/Apple" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
+                <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://green-index-api.onrender.com/company/Apple" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
                   </div>
                 <img src="/images/company.png">
                 <h3 class="font-franzSansBold"><strong>Country</strong></h3>
@@ -66,7 +66,7 @@
                 <p><em>This API call will return all the data of the companies of that specific Country</em></p>
                 <p>ex:-</p>
                 <p>/country/usa</p>
-                <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://serene-sea-13642.herokuapp.com/country/USA" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
+                <div class="flex flex-col space-y-10 mb-8 md:flex-row md:justify-between md:items-center md:space-y-0 md:space-x-0"><a href="https://green-index-api.onrender.com/country/USA" target="_blank" class="bg-brandGray md:px-8 w-54 text-center py-4 font-franzSansBold text-mapBlue uppercase rounded-lg">LIVE DEMO</a>
                   </div>
                 <img src="/images/country.png">
             </div>
