updated about page

--- a/public/about.html
+++ b/public/about.html
@@ -51,8 +51,8 @@
         <p dir="ltr"><strong><br>MEET THE TEAM</strong></p>
         <ul>
             <li><strong>M : Milind</strong>- Creative Head and Brainstormer. </li>
-            <li><strong>A : Anurag</strong>- Data Pipelining and Extracting.</li>
-            <li><strong>S : Satwik</strong>- FrontEnd Developer. </li>
+            <li><strong>S : Satwik</strong>- Data Pipelining and Extracting.</li>
+            <li><strong>S : Sai Kiran</strong>- FrontEnd Developer. </li>
             <li><strong>K : Kanhaiya</strong>- BackEnd Developer. </li>
         </ul>
         <p>YOU CAN'T MASK THE TRUTH FROM US</p>
